# escape-block-rest

./: .dockerignore  .gitignore  ChangeLog.md  Dockerfile  LICENSE  LICENSE.md  README.md  escape-block-rest.cabal  my-rest.cabal  package.yaml
app/: Main.hs
prod/: Dockerfile
src/: Bfs.hs  Lib.hs  Serialization.hs  Server.hs  State.hs
test/: 01.json  02.json  03.json  04.json  05.json  06.json  Spec.hs  t-01.json  t-02.json  t-03.json  t-04.json
