name:                my-rest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iurii-kyrylenko/my-rest#readme
license:             BSD3
license-file:        LICENSE
author:              Iurii Kyrylenko
maintainer:          https://github.com/iurii-kyrylenko
copyright:           2017 Iurii Kyrylenko
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
                     , Bfs
                     , State
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , aeson
                     , hashmap
                     , containers
  default-language:    Haskell2010

executable my-rest-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , my-rest
  default-language:    Haskell2010

test-suite my-rest-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , my-rest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iurii-kyrylenko/my-rest
